# mccn-engine

./: .gitignore  404.html  LLara_Campey_Demo.ipynb  Makefile  OZBarley_Demo.ipynb  README.md  README.txt  UQ_Data_Demo.ipynb  case_study_3.ipynb  csv_load_demo.ipynb  endpoint_load_demo.ipynb  engine_demo.ipynb  index.html  main.py  mccn_demo.ipynb  mkdocs.yml  mypy.ini  objects.inv  point_data_playground.ipynb  point_load.ipynb  point_load_demo.ipynb  pyproject.toml  raster_load.ipynb  raster_load_demo.ipynb  raster_load_demo_alias.ipynb  raster_odc_stac.ipynb  vector_load.ipynb  vector_load_demo.ipynb
.github/workflows/: analysis_ci.yml  github-actions.yml  test_ci.yml
api_reference/: index.html
case_study_3_stac/: collection.json
case_study_3_stac/NSW_SOC_0_10/: NSW_SOC_0_10.json
case_study_3_stac/NSW_SOC_0_30/: NSW_SOC_0_30.json
case_study_3_stac/NSW_SOC_0_5/: NSW_SOC_0_5.json
case_study_3_stac/NSW_SOC_10_30/: NSW_SOC_10_30.json
case_study_3_stac/NSW_SOC_15_30/: NSW_SOC_15_30.json
case_study_3_stac/NSW_SOC_5_15/: NSW_SOC_5_15.json
case_study_3_stac/NSW_pH_0_10/: NSW_pH_0_10.json
case_study_3_stac/NSW_pH_0_30/: NSW_pH_0_30.json
case_study_3_stac/NSW_pH_0_5/: NSW_pH_0_5.json
case_study_3_stac/NSW_pH_100_200/: NSW_pH_100_200.json
case_study_3_stac/NSW_pH_10_30/: NSW_pH_10_30.json
case_study_3_stac/NSW_pH_15_30/: NSW_pH_15_30.json
case_study_3_stac/NSW_pH_30_60/: NSW_pH_30_60.json
case_study_3_stac/NSW_pH_5_15/: NSW_pH_5_15.json
case_study_3_stac/NSW_pH_60_100/: NSW_pH_60_100.json
case_study_3_stac/rainfall/: rainfall.json
case_study_3_stac/temperature/: temperature.json
configs/case-study-1/: raster_config.json
configs/case-study-7/: llara_point_config.json  llara_raster_config.json  llara_shape_config.json  scenario_1_config.json  scenario_2_config.json
configs/gryfn/: config.json
configs/llara_campey/: raster_config.json  raster_vector_config.json
configs/test-geotiff/: raster_config.json
docs/: api_reference.md  filter.md  index.md
filter/: index.html
mccn/: _types.py  client.py  config.py  drawer.py  extent.py  filter.py  geobox.py  load.py  loader.py  mccn.py  parser.py  pipeline.py  utils.py  wcs_importer.py
mccn/loader/: base.py  point.py  raster.py  utils.py  vector.py
mccn/loader/point/: config.py  loader.py
mccn/loader/raster/: config.py  loader.py
mccn/loader/vector/: __init__.py  config.py  loader.py  vector.py
point/: index.html
quickstart/: index.html
raster/: index.html
search/: search_index.json
setup/: index.html
tests/: README  conftest.py  test_drawer.py  test_parser.py  utils.py
tests/files/integration_tests/raster/config/: raster_config.json
tests/files/unit_test/raster/realestate/: TullamarinePrice.tif  WyndhamPrice.tif
tests/files/unit_tests/point/: campey_point.json  silo_data_1.csv  silo_data_2.csv  silo_data_3.csv  silo_proc_bands.json  silo_std.json  soil.json
tests/files/unit_tests/point/configs/: std_config.json
tests/files/unit_tests/point/conversion/: config.json  south_F.csv
tests/files/unit_tests/point/conversion/stac/: collection.json
tests/files/unit_tests/point/conversion/stac/north/: north.json
tests/files/unit_tests/point/conversion/stac/south/: south.json
tests/files/unit_tests/point/nodate/: config.json  south_F.csv
tests/files/unit_tests/point/nodate/stac/: collection.json
tests/files/unit_tests/point/nodate/stac/south/: south.json
tests/files/unit_tests/point/stac/std/: collection.json
tests/files/unit_tests/point/stac/std/silo_1/: silo_1.json
tests/files/unit_tests/point/standard/: config.json  north.csv  south.csv
tests/files/unit_tests/point/standard/stac/: collection.json
tests/files/unit_tests/raster/: SunburyPriceUSD.tif  llara_campey_raster.json  ozbarley_raster.json  rea.json
tests/files/unit_tests/raster/configs/: std_config.json
tests/files/unit_tests/raster/realestate/: config.json
tests/files/unit_tests/raster/realestate/stac/: collection.json
tests/files/unit_tests/raster/stac/std/: collection.json
tests/files/unit_tests/vector/: attribute.json  join.json  mask.json  mask_attribute.json
tests/loader/raster/: test_config.py  test_loader.py  utils.py
tests/loader/raster/fixture/: bottom-left.tif  bottom-right.tif  config.json  dsm_config.json  multibands.cd  multibands_config.json  top-left-rgb.tif  top-left.tif
tests/loader/raster/fixture/asset/: top-left-rgb.tif  top-right.tif
tests/loader/raster/fixture/config/: dsm_config.json  multibands_config.json
tests/loader/raster/fixture/reference_cube/: day_dsm.cd  hour_dsm.cd  month_dsm.cd  year_dsm.cd
tests/loader/vector/: test_loader.py
tests/loader/vector/fixture/: area_config.json  crime.csv  population.csv
tests/loader/vector/fixture/config/: area_config.json
tests/loader/vector/fixture/reference_cube/: global.pkl  hoppers_crossing_name.pkl  hoppers_crossing_name_global.pkl  point_cook_mask.pkl  point_cook_mask_global.pkl  sunbury_crime.pkl  sunbury_crime_global.pkl  sunbury_population.pkl  sunbury_population_global.pkl  werribee_crime.pkl  werribee_crime_global.pkl
vector/: index.html
(+10 files in other folders)
