[tool.poetry]
name = "mccn-engine"
version = "0.1.0"
description = ""
authors = ["Joseph <joseph.sclauzero@adelaide.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
owslib = "^0.31.0"
rasterio = "^1.3.10"
pystac-client = "^0.8.2"
matplotlib = "^3.9.0"
odc-stac = "^0.3.10"
tqdm = "^4.66.4"
rioxarray = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.2"
pre-commit = "^3.7.1"
mypy = "^1.10.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@(abc\\.)?abstractmethod",
    "def __getattr__",
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 100
src = ["mccn"]
target-version = "py312"